--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -9,8 +9,10 @@
   <br>
   叙述
   <br>
+  <%= f.text_area :description %>
+  <br>
 
   <%= f.submit "Submit", :disable_with => 'Submiting...' %>
   <% end %>
-  
+
 </div>
